v1/deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: v1

spec:
  replicas: 1

  selector:
    matchLabels:
      app: v1

  template:
    metadata:
      labels:
        app: v1
    spec:
      containers:
      - name: v1
        image: wil42/playground:v1
        ports:
        - containerPort: 8888
