v1/service.yaml
apiVersion: v1

kind: Service

metadata:
  name: v1-service 

spec:
  type: ClusterIP
  
  selector:
    app: v1
  
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888
